# course-oauth2

./: README.md
github-oauth/: .env.example  Cargo.toml
github-oauth/src/: main.rs
oauth2/oauth2/: Cargo.toml  oauth2.sql
oauth2/oauth2-ui/: index.html  package.json  tsconfig.app.json
oauth2/oauth2-ui.tmp/: pnpm-lock.yaml  vite.config.ts
oauth2/oauth2-ui.tmp/src/: main.tsx
oauth2/oauth2-ui.tmp/src/pages/: AuthRegister.tsx
oauth2/oauth2-ui.tmp/src/types/: application.d.ts
oauth2/oauth2-ui/src/: fetch.ts  index.css  router.tsx
oauth2/oauth2-ui/src/api/: application.ts  auth.ts  authorize.ts
oauth2/oauth2-ui/src/components/: Container.tsx  ErrorMsg.tsx  OauthAuthorizeConfirm.tsx  PageTitle.tsx
oauth2/oauth2-ui/src/pages/: ApplicationDetail.tsx  ApplicationList.tsx  AuthLogin.tsx  NewApplication.tsx  OauthAuthorize.tsx
oauth2/oauth2-ui/src/types/: application_secret.d.ts  auth.d.ts  user.d.ts  (+1 more)
oauth2/oauth2/examples/: access_token.rs  user_api.rs
oauth2/oauth2/src/: cfg.rs  err.rs  lib.rs  main.rs  resp.rs  state.rs
oauth2/oauth2/src/application/: db.rs  handler.rs  model.rs  payload.rs
oauth2/oauth2/src/application_secret/: db.rs  handler.rs  mod.rs  model.rs  payload.rs
oauth2/oauth2/src/auth/: handler.rs  payload.rs
oauth2/oauth2/src/authorize/: db.rs  handler.rs  model.rs  payload.rs
oauth2/oauth2/src/init/: mod.rs  pg.rs  router.rs
oauth2/oauth2/src/mw/: user_auth.rs
oauth2/oauth2/src/token/: db.rs  model.rs
oauth2/oauth2/src/user/: db.rs  handler.rs  model.rs
oauth2/oauth2/src/utils/: mod.rs  nonce.rs  password.rs  sha256.rs
(+6 files in other folders)
