[package]
name = "oauth2"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.8"
bcrypt = "0.19.0"
chrono = { version = "0.4.44", features = ["serde"] }
dotenv = "0.15.0"
rand = "0.10.1"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "postgres",
    "chrono",
    "json",
] }
thiserror = "2.0.18"
tokio = { version = "1.51.1", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "net",
] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
utf8_slice = "1.0.0"
validator = { version = "0.20.0", features = ["derive"] }
xid = "1.1.1"
